kubernetes/apps/tools/paperless/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless
  namespace: tools
  labels:
    route.scope: internal
  annotations:
    external-dns.alpha.kubernetes.io/public: "false"
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |
      group: Tools
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Tools
    gethomepage.dev/name: Paperless-ngx
    gethomepage.dev/icon: paperless-ngx.png
    gethomepage.dev/href: https://paperless.vaderrp.com
    gethomepage.dev/pod-selector: app.kubernetes.io/name=paperless
spec:
  parentRefs:
    - name: gateway-internal
      namespace: network
  hostnames: ["paperless.vaderrp.com"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: paperless
          port: 8000
